fix dropdown visibility on mobile homepage

--- a/scss/partials/_components.scss
+++ b/scss/partials/_components.scss
@@ -338,7 +338,7 @@ header.parallax-container {
   margin-left: -17px;
 
   .home & {
-    top: 146px;
+    top: 100px;
     height: 65px;
     width: 163px;
     margin-left: -81.5px;
